# GraphConvolutionalBranchandBound

./: .gitignore  LICENCE  README.md
src/HybridSolver/: CMakeLists.txt
src/HybridSolver/1tree/data/: README.md
src/HybridSolver/1tree/data/AdjacencyMatrix/: example.csv
src/HybridSolver/1tree/data/TSPLIB/: example.tsp
src/HybridSolver/1tree/main/: HybridSolver.py  main.c  tsp_instance_reader.h
src/HybridSolver/1tree/main/algorithms/: branch_and_bound.c  branch_and_bound.h  kruskal.h  prim.h
src/HybridSolver/1tree/main/data_structures/: b_and_b_data.c  b_and_b_data.h  fibonacci_heap.c  graph.c  graph.h  mfset.c  mfset.h  mst.c  mst.h
src/HybridSolver/1tree/main/graph-convnet-tsp/: README.md
src/HybridSolver/1tree/results/: ReadME.md
src/HybridSolver/1tree/test/: ReadME.md  main_test.c  main_test.h  test_BB.c  test_BB.h  test_graph.c  test_graph.h  test_kruskal.c  test_kruskal.h  test_mfset.c  test_mfset.h
src/HybridSolver/Concorde/: .gitignore  CMakeLists.txt  README.md  analyzer.py  compile.sh  results.csv  runner.py
src/HybridSolver/Concorde/configs/: config.yaml
src/HybridSolver/Concorde/examples/: sol_gen.py
src/HybridSolver/Concorde/models/: GNN.py  README.md  TSP_GNN_GAT_EUC_2D  TSP_GNN_GAT_GEO  TSP_GNN_GAT_MAN_2D  dataset.py  experiment.py  model.py
src/HybridSolver/main/: Finetuning.py  HybridSolver.py  ReadME.md  TwoOpt.py  main.c  problem_settings.h  tsp_instance_reader.c  tsp_instance_reader.h
src/HybridSolver/main/algorithms/: branch_and_bound.c  branch_and_bound.h  kruskal.c  kruskal.h  prim.c  prim.h
src/HybridSolver/main/data_structures/: b_and_b_data.c  b_and_b_data.h  fibonacci_heap.c  fibonacci_heap.h  graph.c  graph.h  mfset.c  mfset.h  mst.c  mst.h
src/HybridSolver/main/graph-convnet-tsp/: README.md  main.py
src/HybridSolver/main/py2opt/: routefinder.py  solver.py
src/HybridSolver/results/AdjacencyMatrix/: analyzer.py  example.txt  mean_results_100_nodes.txt  tsp_150_nodes_2Opt.txt  tsp_200_nodes_2Opt.txt
src/HybridSolver/test/: main_test.c  main_test.h  test_BB.c  test_BB.h  test_graph.c  test_graph.h  test_kruskal.c  test_kruskal.h  test_mfset.c  test_mfset.h  test_prim.c  test_prim.h  test_read_file.c  test_read_file.h
(+44479 files in other folders)
